# Sudoku-Solo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  gameApplication.cpp  gameApplication.h  main.cpp
src/backend/: bgmPlayer.cpp  bgmPlayer.h  gameManager.cpp  gameManager.h  gameSettings.cpp  gameSettings.h  logger.cpp  logger.h  mapForQObject.cpp  mapForQObject.h  resourceDownloader.cpp  resourceDownloader.h  settingBase.cpp  settingBase.h  soundEffects.cpp  soundEffects.h
src/res/: CMakeLists.txt  about.md  logo.rc  res.qrc  res.qrc.autosave
src/res/background/1153238076/: project.json
src/res/background/chromaDrencher/: Index.html  chromadrencher.js
src/sudoku/: CMakeLists.txt  dancingLinks.cpp  dancingLinks.h  solverBase.cpp  solverBase.h  solverDl.cpp  solverDl.h  sudokuGenerator.cpp  sudokuGenerator.h  sudokuMatrix.cpp  sudokuMatrix.h
src/ui/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  mainWindow.ui
src/ui/components/: CMakeLists.txt  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  backgroundSetting.cpp  backgroundSetting.h  backgroundSetting.ui  btnSudokuUnit.cpp  btnSudokuUnit.h  btnSudokuUnit.ui  confirmationDialog.cpp  confirmationDialog.h  confirmationDialog.ui  gameButton.cpp  gameButton.h  gameButton.qss  gameButton.ui  gameLanguage.cpp  gameLanguage.h  gameLanguage.ui  gameMessageBox.cpp  gameMessageBox.h  gameMessageBox.qss  gameMessageBox.ui  gameOptionWidget.cpp  gameOptionWidget.h  gameOptionWidget.ui  gameSoundSetting.cpp  gameSoundSetting.h  gameSoundSetting.qss  gameSoundSetting.ui  gamingWidget.cpp  gamingWidget.h  gamingWidget.ui  inputSudokuDialog.cpp  inputSudokuDialog.h  inputSudokuDialog.ui  numberChoiceDialog.cpp  numberChoiceDialog.h  numberChoiceDialog.ui  (+10 more)
src/ui/page/: CMakeLists.txt  GameSettingWidget.cpp  GameSettingWidget.h  GameSettingWidget.ui  aboutWidget.cpp  aboutWidget.h  aboutWidget.ui  backgroundWidget.cpp  backgroundWidget.h  backgroundWidget.ui  gamePauseWidget.cpp  gamePauseWidget.h  gamePauseWidget.ui  gamePrepareWidget.cpp  gamePrepareWidget.h  gamePrepareWidget.ui  gameResourceCheckWidget.cpp  gameResourceCheckWidget.h  gameResourceCheckWidget.ui  gamingWidget.cpp  gamingWidget.h  gamingWidget.ui  homeWidget.cpp  homeWidget.h  homeWidget.ui  savesBrowserWidget.cpp  savesBrowserWidget.h  savesBrowserWidget.ui  stackedWidget.cpp  stackedWidget.h  stackedWidget.ui  sudokuGridWidget.cpp  sudokuGridWidget.h  sudokuGridWidget.ui
translations/: CMakeLists.txt  en_US.ts  zh_CN.ts
